--- a/Grafana_yaml_files/Grafana-service.yaml
+++ b/Grafana_yaml_files/Grafana-service.yaml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: grafana
+  name: grafana.com
 spec:
   accessModes:
     - ReadWriteOnce
@@ -14,7 +14,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   labels:
-    app: grafana
+    app: grafana.com
   name: grafana
 spec:
   selector:
@@ -70,7 +70,7 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: grafana
+  name: grafana.com
 spec:
   ports:
     - port: 3000
